--- a/TipsTrick.html
+++ b/TipsTrick.html
@@ -134,7 +134,7 @@
           <div class="col-md-7">
             <div class="row">
               <div class="col-md-6">
-                <img class="foto1" src="img/about1.jpeg" alt="" />
+                <img class="foto12" src="img/sepatu_rawat.jpg" alt="" />
                 <h4>Merawat Sepatu Kulit Dengan Mudah dan Cepat</h4>
                 <h6>Tahan Air dan Berkilau</h6>
                 <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop1" aria-controls="staticBackdrop1"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
@@ -146,11 +146,11 @@
                   <div class="offcanvas-body">
                     <div class="container">
                       <div class="text-center">
-                        <img src="img/tips2.jpg" class="fotodalam" alt="" />
+                        <img src="img/sepatu_rawat.jpg" class="fotodalam" alt="" />
                       </div>
                       <div class="row d-flex justify-content-center align-items-center mt-5">
                         <div class="col-md-4">
-                          <img class="foto2" src="img/tips1.jpg" alt="" />
+                          <img class="foto2" src="img/sepatu_rawat2.jpg" alt="" />
                         </div>
                         <div class="col-md-8">
                           <h1>Bersihkan sepatu kulit dengan kain halus</h1>
@@ -173,12 +173,12 @@
                           </p>
                         </div>
                         <div class="col-md-4">
-                          <img class="foto2" src="img/tips2.jpg" alt="" />
+                          <img class="foto2" src="img/sepatu_rawat3.jpg" alt="" />
                         </div>
                       </div>
                       <div class="row d-flex justify-content-center align-items-center mt-5">
                         <div class="col-md-4">
-                          <img class="foto2" src="img/tips3.jpg" alt="" />
+                          <img class="foto2" src="img/sepatu_rawat4.jpg" alt="" />
                         </div>
                         <div class="col-md-8">
                           <h1>Bersihkan noda menggunakan air dan cuka</h1>
@@ -193,7 +193,7 @@
                 </div>
               </div>
               <div class="col-md-6">
-                <img class="foto1" src="img/about1.jpeg" alt="" />
+                <img class="foto12" src="img/bahan_kulit.jpg" alt="" />
                 <h4>Cara Mengidentifikasi Bahan Kulit Asli</h4>
                 <h6>Kulit Asli vs Kulit Sintetis</h6>
                 <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop2" aria-controls="staticBackdrop2"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
@@ -205,11 +205,11 @@
                   <div class="offcanvas-body">
                     <div class="container">
                       <div class="text-center">
-                        <img src="img/tips2.jpg" class="fotodalam" alt="" />
+                        <img src="img/bahan_kulit.jpg" class="fotodalam" alt="" />
                       </div>
                       <div class="row d-flex justify-content-center align-items-center mt-5">
                         <div class="col-md-4">
-                          <img class="foto2" src="img/tips1.jpg" alt="" />
+                          <img class="foto2" src="img/ahli.jpg" alt="" />
                         </div>
                         <div class="col-md-8">
                           <h1>Periksa Tekstur Permukaan</h1>
@@ -231,12 +231,12 @@
                           </p>
                         </div>
                         <div class="col-md-4">
-                          <img class="foto2" src="img/tips2.jpg" alt="" />
+                          <img class="foto2" src="img/bahan_kulit2.jpg" alt="" />
                         </div>
                       </div>
                       <div class="row d-flex justify-content-center align-items-center mt-5">
                         <div class="col-md-4">
-                          <img class="foto2" src="img/tips3.jpg" alt="" />
+                          <img class="foto2" src="img/bahan_kulit3.jpg" alt="" />
                         </div>
                         <div class="col-md-8">
                           <h1>Uji Dengan Api</h1>
@@ -255,7 +255,7 @@
                           </p>
                         </div>
                         <div class="col-md-4">
-                          <img class="foto2" src="img/tips2.jpg" alt="" />
+                          <img class="foto2" src="img/bahan_kulit4.jpg" alt="" />
                         </div>
                       </div>
                     </div>
@@ -265,7 +265,7 @@
             </div>
             <div class="row">
               <div class="col-md-6">
-                <img class="foto1" src="img/about1.jpeg" alt="" />
+                <img class="foto12" src="img/jelajah.jpg" alt="" />
                 <h4>Jenis Bahan Tas Kulit yang Banyak Dicari</h4>
                 <h6>Bahan Terbaik Terpilih Oleh Ahli</h6>
                 <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop3" aria-controls="staticBackdrop3"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
@@ -277,37 +277,31 @@
                   <div class="offcanvas-body">
                     <div class="container">
                       <div class="text-center">
+                        <img src="img/jelajah.jpg" class="fotodalam" alt="" />
+                      </div>
+                      <div class="text-center">
                         <h4 class="my-3 pb-5">
                           Dari berbagai macam pilihan bahan kulit yang ada, kulit hewan sendiri secara umum dapat dibedakan lagi ke dalam berbagai macam variasi bahan yang berbeda-beda. Untuk mudahkan anda dalam menemukan produk tas yang
                           berkualitas berikut kami bagikan rekomendasi beberapa bahan tas kulit yang banyak disukai oleh para pecinta fashion.
                         </h4>
                       </div>
-                      <div class="row d-flex justify-content-center my-5 margteng align-items-center">
-                        <div class="col-md-4">
-                          <img class="foto1" src="img/about1.jpeg" alt="" />
-                        </div>
-                        <div class="col-md-8">
+                      <div class="row d-flex justify-content-center mt-3 mb-5 margteng align-items-center">
+                        <div class="col-md-12">
                           <h1 class="text-center">Bahan Kulit suede</h1>
                           <p style="text-align: justify; text-indent: 4rem">Bahan kulit suede termasuk ke dalam jenis tas yang permukaan halus seperti kain beludru karena dibuat dari bagian dalam kulit hewan yang dekat dengan daging.</p>
                         </div>
                       </div>
                       <div class="row d-flex justify-content-center my-5 margteng align-items-center">
-                        <div class="col-md-8">
+                        <div class="col-md-12">
                           <h1 class="text-center">Bahan Kulit Nubuck</h1>
                           <p style="text-align: justify; text-indent: 4rem">
                             Bahan kulit nubuck secara kasat mata memiliki tampilan yang hampir sama dengan kulit suede. Hanya saja bahan utama yang digunakan untuk membuat kulit nubuck pada umumnya diambil dari bagian terluar kulit binatang
                             yang dihaluskan.
                           </p>
                         </div>
-                        <div class="col-md-4">
-                          <img class="foto1" src="img/about1.jpeg" alt="" />
-                        </div>
                       </div>
                       <div class="row d-flex justify-content-center my-5 margteng align-items-center">
-                        <div class="col-md-4">
-                          <img class="foto1" src="img/about1.jpeg" alt="" />
-                        </div>
-                        <div class="col-md-8">
+                        <div class="col-md-12">
                           <h1 class="text-center">Bahan Kulit Brush Off</h1>
                           <p style="text-align: justify; text-indent: 4rem">
                             Dari semua jenis dan proses pengolahan kulit, brush off atau patent leather menjadi salah satu jenis bahan tas yang pembuatannya paling rumit. Tidak mengherankan juka tas yang dibuat dari bahan ini harganya
@@ -316,14 +310,11 @@
                         </div>
                       </div>
                       <div class="row d-flex justify-content-center my-5 margteng align-items-center">
-                        <div class="col-md-8">
+                        <div class="col-md-12">
                           <h1 class="text-center">Bahan Kulit Grain</h1>
                           <p style="text-align: justify; text-indent: 4rem">
                             Bahan kulit grain merupakan jenis bahan tas yang bahan utamanya biasa diolah secara utuh tanpa ada modifikasi pada struktur kulit sehingga tekstur pada permukaan alaminya masih jelas terlihat.
                           </p>
-                        </div>
-                        <div class="col-md-4">
-                          <img class="foto1" src="img/about1.jpeg" alt="" />
                         </div>
                       </div>
                     </div>
@@ -331,7 +322,7 @@
                 </div>
               </div>
               <div class="col-md-6">
-                <img class="foto1" src="img/about1.jpeg" alt="" />
+                <img class="foto12" src="img/about3.jpg" alt="" />
                 <h4>Cara Memilih Jaket Kulit Berkualitas</h4>
                 <h6>Nyaman dan Tidak Panas Digunakan</h6>
                 <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop4" aria-controls="staticBackdrop4"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
@@ -355,7 +346,7 @@
                         <div class="col-md-12 mb-3">
                           <h3 class="fw-bold">1. Pilihlah jaket kulit dengan desain yang simpel dan minimalis</h3>
                           <div class="text-center">
-                            <img src="img/about3.jpg" class="fotodalamdalam" alt="" />
+                            <img src="img/dalam11.jpg" class="fotodalamdalamlagi" alt="" />
                           </div>
                           <p class="my-3" style="text-align: justify; text-indent: 4rem">
                             Less is more, juga berlaku untuk memilih jaket kulit. Sebaiknya pilihlah jaket kulit yang memiliki model simpel dan minimalis agar bisa bertahan sepanjang masa. Jaket kulit yang memiliki banyak aksen seperti
@@ -366,7 +357,7 @@
                         <div class="col-md-12 my-3">
                           <h3 class="fw-bold">2. Pilihlah desain jaket yang pas di tubuh</h3>
                           <div class="text-center">
-                            <img src="img/about3.jpg" class="fotodalamdalam" alt="" />
+                            <img src="img/dalam3.jpg" class="fotodalamdalamlagi" alt="" />
                           </div>
                           <p class="my-3" style="text-align: justify; text-indent: 4rem">
                             Pastikan kamu memilih jaket kulit yang pas di tubuh. Hindari memilih jaket kulit yang terlalu besar karena hanya akan membuat tubuh terlihat tenggelam dan kurang proporsional. Sebaliknya jika jaket kulit
@@ -377,7 +368,7 @@
                         <div class="col-md-12 my-3">
                           <h3 class="fw-bold">3. Pastikan kamu memilih jaket kulit yang asli</h3>
                           <div class="text-center">
-                            <img src="img/about3.jpg" class="fotodalamdalam" alt="" />
+                            <img src="img/dalam2.jpg" class="fotodalamdalamlagi" alt="" />
                           </div>
                           <p class="my-3" style="text-align: justify; text-indent: 4rem">
                             Sebelum membeli jaket kulit, pastikan kamu memilih jaket yang asli. Jaket kulit asli pastinya lebih berkualitas dan bisa dipakai dalam waktu yang sangat lama. Bahan kulit yang biasa digunakan adalah kulit domba,
@@ -388,7 +379,7 @@
                         <div class="col-md-12 my-3">
                           <h3 class="fw-bold">4. Perhatikan harga jaket, jangan sampai di bawah rata-rata!</h3>
                           <div class="text-center">
-                            <img src="img/about3.jpg" class="fotodalamdalam" alt="" />
+                            <img src="img/dalam5.jpg" class="fotodalamdalamlagi" alt="" />
                           </div>
                           <p class="my-3" style="text-align: justify; text-indent: 4rem">
                             Biasanya jaket kulit ini memiliki standar harga yang bisa dibilang lumayan mahal. Normalnya jaket kulit dijual dengan harga di atas Rp500 ribuan. Jika kamu mendapatkan jaket kulit dengan harga di bawah Rp500
@@ -459,7 +450,7 @@
             <!-- Grid column -->
 
             <!-- Grid column -->
-            <div class="col-md-5 col-lg-4 col-xl-4 mx-auto mb-md-0 mb-4 text-start">
+            <div class="col-md-5 col-lg-4 col-xl-4 mx-auto mb-md-0 mb-4 text-center">
               <!-- Links -->
               <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
               <div class="tekskiri">
