--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
           Kulit Abdi.Co didirikan pada tahun 2023 di Jalan Surya Sumatri, Bandung, Jawa Barat. Kami memproduksi fashion basic kulit asli handmade (<i> vintage </i>) dan setiap bahan yang kami gunakan harus melewati quality control standar
           untuk menjamin kualitas produk kami.
         </p>
-        <img src="img/about1.jpeg" class="img-about1" alt="" />
+        <img src="img/about1.jpg" class="img-about1" alt="" />
         <div class="text-start">
           <p>
             Sebuah survei telah dilakukan dan menunjukkan bahwa produk kami tahan lama hingga lebih dari 20 tahun dan banyak pelanggan kami yang senang dengan produk KulitAbdi. Selain bahan pilihan yang berkualitas tinggi, kami juga
