--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
           <div class="col-md-6 d-flex align-items-center justify-content-center">
             <div class="card mx-2">
               <div class="card-image">
-                <img src="img/david.png" class="card-image-inside" alt="" />
+                <img src="img/david2.JPG" class="card-image-inside" alt="" />
               </div>
 
               <div class="heading">
@@ -77,7 +77,7 @@
             </div>
             <div class="card mx-2">
               <div class="card-image">
-                <img src="img/arthur2.jpg" class="card-image-inside" alt="" />
+                <img src="img/arthur.JPG" class="card-image-inside" alt="" />
               </div>
 
               <div class="heading">
