--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
       <div class="container">
         <div class="row d-flex align-items-center justify-content-center mx-auto tinggi-cont">
           <div class="col-md-10 text-white">
-            <h1 class="judulbesar py-1" data-aos="zoom-out-down" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">KOLEKSI FASHION KULIT</h1>
-            <h3 class="judulsedang py-1" data-aos="zoom-out-down" data-aos-offset="200" data-aos-delay="500" data-aos-duration="1000" data-aos-mirror="true">DESAIN KERAJINAN TANGAN</h3>
-            <p class="judulkecil py-1" data-aos="zoom-out-down" data-aos-offset="200" data-aos-delay="1000" data-aos-duration="1000" data-aos-mirror="true">
+            <h1 class="judulbesar py-1" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">KOLEKSI FASHION KULIT</h1>
+            <h3 class="judulsedang py-1" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="500" data-aos-duration="1000" data-aos-mirror="true">DESAIN KERAJINAN TANGAN</h3>
+            <p class="judulkecil py-1" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="1000" data-aos-duration="1000" data-aos-mirror="true">
               Telusuri koleksi busana kulit terbaru dari KulitAbdi.Co. Produk kami berkualitas tinggi karena kami memproduksi dengan bahan dasar fashion kulit asli buatan tangan (vintage) dan setiap bahan yang kami gunakan harus melewati
               kontrol kualitas standar untuk menjamin kualitas produk kami.
             </p>
-            <div data-aos="zoom-out-down" data-aos-offset="200" data-aos-delay="1500" data-aos-duration="1000" data-aos-mirror="true">
+            <div data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="1500" data-aos-duration="1000" data-aos-mirror="true">
               <a class="btn btn-lg btn-outline-primary" href="#jelajah" role="button"><h4 class="Explore py-1">Jelajahi lebih lanjut</h4></a>
             </div>
           </div>
