--- a/about.html
+++ b/about.html
@@ -22,6 +22,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg fixed-top">
@@ -58,12 +60,12 @@
     </nav>
 
     <div class="container text-center margprod">
-      <h1 class="mb-5">Mengapa Fashion Kulit?</h1>
+      <h1 class="mb-5" data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">Mengapa Fashion Kulit?</h1>
       <div class="row d-flex align-items-center">
         <div class="col-md-4">
           <img src="img/dalam1.jpg" class="foto1" alt="" />
         </div>
-        <div class="col-md-8 text-start">
+        <div class="col-md-8 text-start" data-aos="fade-right" data-aos-offset="100" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true">
           <p>
             Sebagai salah satu material yang terkesan mewah dan berkelas, bahan kulit memang selalu menarik untuk dieksplorasi menjadi pakaian yang memukau. Khusus untuk tahun 2023, item fashion berbahan kulit yang diciptakan dalam berbagai
             variasi warna bahkan juga bisa diandalkan untuk bergaya saat ini.
@@ -75,14 +77,14 @@
         </div>
       </div>
       <div class="margteng"></div>
-      <h1 class="my-5">KulitAbdi.Co</h1>
+      <h1 class="my-5" data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">KulitAbdi.Co</h1>
       <div class="margteng">
-        <p>
+        <p data-aos="fade-down" data-aos-offset="100" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true">
           Kulit Abdi.Co didirikan pada tahun 2023 di Jalan Surya Sumatri, Bandung, Jawa Barat. Kami memproduksi fashion basic kulit asli handmade (<i> vintage </i>) dan setiap bahan yang kami gunakan harus melewati quality control standar
           untuk menjamin kualitas produk kami.
         </p>
         <img src="img/about1.jpg" class="img-about1" alt="" />
-        <div class="text-start">
+        <div class="text-start" data-aos="fade-right" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
           <p>
             Sebuah survei telah dilakukan dan menunjukkan bahwa produk kami tahan lama hingga lebih dari 20 tahun dan banyak pelanggan kami yang senang dengan produk KulitAbdi. Selain bahan pilihan yang berkualitas tinggi, kami juga
             mengutamakan inovasi motif dan variasi agar produk kami tampil stand out dan mewah.
@@ -91,8 +93,8 @@
           <p>Kami telah menjual produk kulit asli terbaik selama lebih dari 40 tahun hanya untuk kepuasan pelanggan kami.</p>
         </div>
         <div class="row d-flex justify-content-center align-items-center my-5">
-          <div class="col-md-6"><img class="img-size-about" src="img/about2.jpg" alt="" /></div>
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true"><img class="img-size-about" src="img/about2.jpg" alt="" /></div>
+          <div class="col-md-6" data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
             <h1>Vision</h1>
             <p>"Menjadi perusahaan <i>fashion</i> kulit terbaik dan terbesar di Indonesia."</p>
             <h1>Mission</h1>
@@ -104,7 +106,7 @@
           </div>
         </div>
         <div class="row d-flex justify-content-center align-items-center my-5">
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
             <h1>Our Values</h1>
             <ul class="text-start values">
               <li class="my-2 t-values">Passion - Semangat bekerja keras</li>
@@ -114,7 +116,7 @@
               <li class="my-2 t-values">Loyal - Memiliki kesetiaan yang tinggi</li>
             </ul>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
             <img class="img-size-about" src="img/about3.jpg" alt="" />
           </div>
         </div>
@@ -219,6 +221,10 @@
       <!-- Copyright -->
     </footer>
     <!-- Footer -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="script/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
