--- a/TipsTrick.html
+++ b/TipsTrick.html
@@ -63,7 +63,7 @@
         <div class="row d-flex align-items-center">
           <div class="col-md-5 text-center">
             <img class="foto1" src="img/tips1.jpg" alt="" />
-            <h3 class="text-start">Cara Terbaik Merawat Jaket Kulit</h3>
+            <h3 class="text-start kecil">Cara Terbaik Merawat Jaket Kulit</h3>
             <h5 class="text-start">Tahan Lama dan Anti Jamur</h5>
             <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
             <div class="offcanvas offcanvas-bottom h-100" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel">
@@ -137,7 +137,7 @@
             <div class="row">
               <div class="col-md-6">
                 <img class="foto12" src="img/sepatu_rawat.jpg" alt="" />
-                <h4>Merawat Sepatu Kulit Dengan Mudah dan Cepat</h4>
+                <h4 class="kecil">Merawat Sepatu Kulit Dengan Mudah dan Cepat</h4>
                 <h6>Tahan Air dan Berkilau</h6>
                 <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop1" aria-controls="staticBackdrop1"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
                 <div class="offcanvas offcanvas-bottom h-100" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop1" aria-labelledby="staticBackdropLabel">
