--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
       <div class="container margprod">
         <div class="row d-flex align-items-center justify-content-center mx-auto tinggi-cont">
           <div class="col-md-6 d-flex align-items-center justify-content-center">
-            <div class="card mx-2" data-aos="fade-down" data-aos-offset="200" data-aos-delay="450" data-aos-duration="1000" data-aos-mirror="true">
+            <div class="card h-auto mx-2" data-aos="fade-down" data-aos-offset="200" data-aos-delay="450" data-aos-duration="1000" data-aos-mirror="true">
               <div class="card-image">
                 <img src="img/david2.JPG" class="card-image-inside" alt="" />
               </div>
@@ -77,7 +77,7 @@
                 <div class="author">Maranatha Christian University</div>
               </div>
             </div>
-            <div class="card mx-2" data-aos="fade-up" data-aos-offset="200" data-aos-delay="450" data-aos-duration="1000" data-aos-mirror="true">
+            <div class="card h-auto mx-2" data-aos="fade-up" data-aos-offset="200" data-aos-delay="450" data-aos-duration="1000" data-aos-mirror="true">
               <div class="card-image">
                 <img src="img/arthur.JPG" class="card-image-inside" alt="" />
               </div>
