--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <!-- Image Overlay -->
     <div class="bgHero">
       <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container-fluid">
-          <img class="logo ms-5 me-3" id="logo" src="img/logo2.png" alt="" />
+        <div class="container-fluid align-items-center">
+          <img class="logo" id="logo" src="img/logo2.png" alt="" />
 
-          <a class="nav-link ms-3 me-3" href="index.html">KulitAbdi.Co</a>
+          <a class="nav-link ms-3 me-3 align-items-center pt-2" href="index.html">KulitAbdi.Co</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon" style="color: white"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 200px">
@@ -90,7 +90,7 @@
     <!-- Promosi -->
     <section class="ting pt-5" id="jelajah">
       <div class="container">
-        <div class="row d-flex flex-wrap justify-content-center text-center mb-5">
+        <div class="row d-flex flex-wrap justify-content-center text-center mt-5 mb-3">
           <div class="col-md-12 d-flex justify-content-around">
             <div class="col-md-4 col-sm-12 d-flex justify-content-around" data-aos="zoom-out-down" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
               <img src="img/car1.png" class="promosigambar" alt="" />
