--- a/TipsTrick.html
+++ b/TipsTrick.html
@@ -27,32 +27,32 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg fixed-top">
-      <div class="container-fluid">
-        <img class="logo ms-5 me-3" id="logo" src="img/logo2.png" alt="" />
+      <div class="container-fluid align-items-center">
+        <img class="logo" id="logo" src="img/logo2.png" alt="" />
 
-        <a class="nav-link ms-3 me-3" href="index.html" id="tekshaha3">KulitAbdi.Co</a>
+        <a class="nav-link ms-3 me-3 align-items-center pt-2" href="index.html">KulitAbdi.Co</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon" style="color: white"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
           <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 200px">
             <li class="nav-item mx-2">
-              <a class="nav-link" id="tekshaha" href="about.html">About Us</a>
+              <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link" id="tekshaha1" href="product.html">Products</a>
+              <a class="nav-link" href="product.html">Products</a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link" id="tekshaha10" href="TipsTrick.html">Tips&Trick</a>
+              <a class="nav-link" href="TipsTrick.html">Tips&Trick</a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link" id="tekshaha2" href="contact.html">Contact Us</a>
+              <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
             <li class="nav-item mx-2 d-flex">
               <!-- <a class="btn btn-outline-primary px-4 link-border" href="login.html">Login</a> -->
-              <button href="login.html" class="btnlog" id="tekshaha4">Login</button>
+              <button href="login.html" class="btnlog">Login</button>
             </li>
           </form>
         </div>
