--- a/contact.html
+++ b/contact.html
@@ -39,16 +39,16 @@
         <div class="collapse navbar-collapse" id="navbarScroll">
           <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 200px">
             <li class="nav-item mx-2">
-              <a class="nav-link" href="about.html">About Us</a>
+              <a class="nav-link pt-2" href="about.html">About Us</a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link" href="product.html">Products</a>
+              <a class="nav-link pt-2" href="product.html">Products</a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link" href="TipsTrick.html">Tips&Trick</a>
+              <a class="nav-link pt-2" href="TipsTrick.html">Tips&Trick</a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link" href="contact.html">Contact Us</a>
+              <a class="nav-link pt-2" href="contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
