--- a/TipsTrick.html
+++ b/TipsTrick.html
@@ -36,21 +36,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
           <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 200px">
-            <li class="nav-item mx-2">
-              <a class="nav-link pt-2 text-dark" href="about.html">About Us</a>
+            <li class="nav-item mx-2 pt-2">
+              <a class="nav-link  text-dark" href="about.html">About Us</a>
             </li>
-            <li class="nav-item mx-2">
-              <a class="nav-link pt-2 text-dark" href="product.html">Products</a>
+            <li class="nav-item mx-2 pt-2">
+              <a class="nav-link  text-dark" href="product.html">Products</a>
             </li>
-            <li class="nav-item mx-2">
-              <a class="nav-link pt-2 text-dark" href="TipsTrick.html">Tips&Trick</a>
+            <li class="nav-item mx-2 pt-2">
+              <a class="nav-link  text-dark" href="TipsTrick.html">Tips&Trick</a>
             </li>
-            <li class="nav-item mx-2">
-              <a class="nav-link pt-2 text-dark" href="contact.html">Contact Us</a>
+            <li class="nav-item mx-2 pt-2">
+              <a class="nav-link  text-dark" href="contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
-            <li class="nav-item mx-2 d-flex">
+            <li class="nav-item mx-2 pt-2 d-flex">
               <!-- <a class="btn btn-outline-primary px-4 link-border" href="login.html">Login</a> -->
               <button href="login.html" class="btnlog">Login</button>
             </li>
