--- a/index.html
+++ b/index.html
@@ -33,28 +33,28 @@
       <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid align-items-center">
           <img class="logo" id="logo" src="img/logo2.png" alt="" />
-  
+
           <a class="nav-link ms-3 me-3 align-items-center pt-2" href="index.html">KulitAbdi.Co</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" style="color: white"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 200px">
-              <li class="nav-item mx-2">
-                <a class="nav-link pt-2" href="about.html">About Us</a>
+              <li class="nav-item pt-2 mx-2">
+                <a class="nav-link" href="about.html">About Us</a>
               </li>
-              <li class="nav-item mx-2">
-                <a class="nav-link pt-2" href="product.html">Products</a>
+              <li class="nav-item pt-2 mx-2">
+                <a class="nav-link" href="product.html">Products</a>
               </li>
-              <li class="nav-item mx-2">
-                <a class="nav-link pt-2" href="TipsTrick.html">Tips&Trick</a>
+              <li class="nav-item pt-2 mx-2">
+                <a class="nav-link" href="TipsTrick.html">Tips&Trick</a>
               </li>
-              <li class="nav-item mx-2">
-                <a class="nav-link pt-2" href="contact.html">Contact Us</a>
+              <li class="nav-item pt-2 mx-2">
+                <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
-              <li class="nav-item mx-2 d-flex">
+              <li class="nav-item mx-2 pt-2 d-flex">
                 <!-- <a class="btn btn-outline-primary px-4 link-border" href="login.html">Login</a> -->
                 <button href="login.html" class="btnlog">Login</button>
               </li>
