--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
     <!-- Footer -->
     <footer class="text-center text-lg-start bg-white text-muted">
       <!-- Section: Social media -->
-      <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+      <section class="d-flex bg-foot text-white justify-content-center justify-content-lg-between p-4 border-bottom">
         <!-- Left -->
         <div class="me-5 d-none d-lg-block">
           <span>Get connected with us on social networks:</span>
@@ -727,16 +727,16 @@
 
         <!-- Right -->
         <div>
-          <a href="" class="me-4 link-secondary">
+          <a href="" class="me-4 link-light" style="text-decoration: none">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="" class="me-4 link-secondary">
+          <a href="" class="me-4 link-light" style="text-decoration: none">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="" class="me-4 link-secondary">
+          <a href="" class="me-4 link-light" style="text-decoration: none">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="" class="me-4 link-secondary">
+          <a href="" class="me-4 link-light" style="text-decoration: none">
             <i class="fab fa-tiktok"></i>
           </a>
         </div>
